gatekeeper/templates/k8sdisallowrunasroot-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowrunasroot
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowRunAsRoot
      validation:
        openAPIV3Schema:
          type: object
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowrunasroot

      violation[{"msg": msg}] {
        input.review.object.spec.securityContext.runAsUser == 0
        msg := "pod securityContext.runAsUser must not be 0"
      }

      violation[{"msg": msg}] {
        container := input.review.object.spec.containers[_]
        container.securityContext.runAsUser == 0
        msg := sprintf("container %q must not run as user 0", [container.name])
      }
